add scrollable text, and change font size buttons to page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,64 @@
 <app-page-header></app-page-header>
 
 <audio controls src="assets/audio/sound.mp3"></audio>
+
+<div class="action-button-container">
+  <button id="location-button" class="button-type">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 24 24"
+      fill="currentColor"
+      class="size-6"
+    >
+      <path
+        fill-rule="evenodd"
+        d="m11.54 22.351.07.04.028.016a.76.76 0 0 0 .723 0l.028-.015.071-.041a16.975 16.975 0 0 0 1.144-.742 19.58 19.58 0 0 0 2.683-2.282c1.944-1.99 3.963-4.98 3.963-8.827a8.25 8.25 0 0 0-16.5 0c0 3.846 2.02 6.837 3.963 8.827a19.58 19.58 0 0 0 2.682 2.282 16.975 16.975 0 0 0 1.145.742ZM12 13.5a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"
+        clip-rule="evenodd"
+      />
+    </svg>
+  </button>
+
+  <div class="font-size-buttons">
+    <button
+      (click)="increaseFontSize()"
+      id="increase-font-size"
+      class="button-type"
+    >
+      A+
+    </button>
+    <button
+      (click)="decreaseFontSize()"
+      id="decrease-font-size"
+      class="button-type"
+    >
+      A-
+    </button>
+  </div>
+</div>
+
+<app-section-title></app-section-title>
+
+<div class="scrollable-text">
+  <p id="scrollable-text">
+    ¡Estás a punto de emprender un viaje por la historia postal y telegráfica de
+    España! En este museo no solo vas a ver piezas fascinantes para los amantes
+    de la filatelia, como el primer sello emitido en nuestro país. También
+    descubrirás las aportaciones españolas que han contribuido al desarrollo
+    tecnológico de la telegrafía; objetos curiosos, como las cartas jeroglíficas
+    o las cartas escritas en pan de munición; o un cuadro de Joaquín Sorolla
+    vinculado con la historia postal y telegráfica. Además, con esta guía podrás
+    jugar y adentrarte en lugares como un vagón de Correos o en una torre de
+    telegrafía óptica. ¡Esperamos que disfrutes de tu visita! Recuerda hacer un
+    buen uso de esta guía y devolverla a la entrada del museo. ¡Empezamos!
+    ¡Estás a punto de emprender un viaje por la historia postal y telegráfica de
+    España! En este museo no solo vas a ver piezas fascinantes para los amantes
+    de la filatelia, como el primer sello emitido en nuestro país. También
+    descubrirás las aportaciones españolas que han contribuido al desarrollo
+    tecnológico de la telegrafía; objetos curiosos, como las cartas jeroglíficas
+    o las cartas escritas en pan de munición; o un cuadro de Joaquín Sorolla
+    vinculado con la historia postal y telegráfica. Además, con esta guía podrás
+    jugar y adentrarte en lugares como un vagón de Correos o en una torre de
+    telegrafía óptica. ¡Esperamos que disfrutes de tu visita! Recuerda hacer un
+    buen uso de esta guía y devolverla a la entrada del museo. ¡Empezamos!
+  </p>
+</div>
