add the carrusel child component in the global app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-page-header></app-page-header>
 
+<app-carrusel></app-carrusel>
+
 <app-modal [open]="open" (toggleModal)="handleToggle($event)"></app-modal>
 
 <audio controls src="assets/audio/sound.mp3"></audio>
