add navigation and pagination to carrusel

--- a/src/app/components/carrusel/carrusel.component.html
+++ b/src/app/components/carrusel/carrusel.component.html
@@ -1,4 +1,9 @@
-<swiper-container class="carrusel-container" slides-per-view="1">
+<swiper-container
+  class="carrusel-container"
+  slides-per-view="1"
+  navigation="true"
+  pagination="true"
+>
   <swiper-slide><img src="assets/images/image1.jpg" alt="" /></swiper-slide>
   <swiper-slide><img src="assets/images/image2.jpg" alt="" /></swiper-slide>
   <swiper-slide><img src="assets/images/image3.jpg" alt="" /></swiper-slide>
