change height of scrollable text, to 35 vh

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -58,7 +58,7 @@ audio {
 .scrollable-text {
   display: flex;
   width: 90%;
-  height: 300px;
+  height: 35vh;
   margin: 10px auto;
   overflow-y: auto;
 
