--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,25 @@
 <app-page-header></app-page-header>
 
+<app-fullscreen
+  [openFullScreen]="openFull"
+  (modeChange)="handleModeChange($event)"
+></app-fullscreen>
+
+<ion-button (click)="openFullscreenMode()" id="fullscreen-button">
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    viewBox="0 0 24 24"
+    fill="currentColor"
+    class="size-6"
+  >
+    <path
+      fill-rule="evenodd"
+      d="M15 3.75a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 .75.75v4.5a.75.75 0 0 1-1.5 0V5.56l-3.97 3.97a.75.75 0 1 1-1.06-1.06l3.97-3.97h-2.69a.75.75 0 0 1-.75-.75Zm-12 0A.75.75 0 0 1 3.75 3h4.5a.75.75 0 0 1 0 1.5H5.56l3.97 3.97a.75.75 0 0 1-1.06 1.06L4.5 5.56v2.69a.75.75 0 0 1-1.5 0v-4.5Zm11.47 11.78a.75.75 0 1 1 1.06-1.06l3.97 3.97v-2.69a.75.75 0 0 1 1.5 0v4.5a.75.75 0 0 1-.75.75h-4.5a.75.75 0 0 1 0-1.5h2.69l-3.97-3.97Zm-4.94-1.06a.75.75 0 0 1 0 1.06L5.56 19.5h2.69a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75v-4.5a.75.75 0 0 1 1.5 0v2.69l3.97-3.97a.75.75 0 0 1 1.06 0Z"
+      clip-rule="evenodd"
+    />
+  </svg>
+</ion-button>
+
 <app-carrusel></app-carrusel>
 
 <app-modal [open]="open" (toggleModal)="handleToggle($event)"></app-modal>
@@ -7,20 +27,9 @@
 <audio controls src="assets/audio/sound.mp3"></audio>
 
 <div class="action-button-container">
-  <button (click)="openModal()" id="location-button" class="button-type">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-      fill="currentColor"
-      class="size-6"
-    >
-      <path
-        fill-rule="evenodd"
-        d="m11.54 22.351.07.04.028.016a.76.76 0 0 0 .723 0l.028-.015.071-.041a16.975 16.975 0 0 0 1.144-.742 19.58 19.58 0 0 0 2.683-2.282c1.944-1.99 3.963-4.98 3.963-8.827a8.25 8.25 0 0 0-16.5 0c0 3.846 2.02 6.837 3.963 8.827a19.58 19.58 0 0 0 2.682 2.282 16.975 16.975 0 0 0 1.145.742ZM12 13.5a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"
-        clip-rule="evenodd"
-      />
-    </svg>
-  </button>
+  <ion-button (click)="openModal()">
+    <ion-icon slot="icon-only" name="location"></ion-icon>
+  </ion-button>
 
   <div class="font-size-buttons">
     <button
